# bitcoin

./: .appveyor.yml  .cirrus.yml  .fuzzbuzz.yml  CONTRIBUTING.md  COPYING  INSTALL.md  Makefile.am  README.md  REVIEWERS  SECURITY.md  configure.ac  libmonicoinconsensus.pc.in  newcoin.sh
doc/man/: Makefile.am  monicoin-cli.1  monicoin-qt.1  monicoin-tx.1  monicoin-wallet.1  monicoind.1
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qt_locale.include  Makefile.qttest.include  Makefile.test.include  Makefile.test_fuzz.include  Makefile.test_util.include  addrdb.h  addrman.h  amount.h  arith_uint256.h  attributes.h  banman.h  base58.h  bech32.h  blockencodings.h  blockfilter.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkqueue.h  clientversion.cpp  clientversion.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  cuckoocache.h  dbwrapper.cpp  dbwrapper.h  flatfile.h  fs.h  hash.h  httprpc.h  httpserver.h  (+75 more)
src/bench/: .gitignore  bench.h  ccoins_caching.cpp  coin_selection.cpp  data.h  verify_script.cpp
src/compat/: assumptions.h  byteswap.h  cpuid.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  stdin.cpp  stdin.h  strnlen.cpp
src/config/: monicoin-config.h.in
src/consensus/: consensus.h  merkle.h  params.h  tx_check.h  tx_verify.h  validation.h
src/crypto/: aes.h  chacha20.h  chacha_poly_aead.h  common.h  hkdf_sha256_32.h  hmac_sha256.h  hmac_sha512.h  muhash.h  poly1305.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha3.h  sha512.h  siphash.h
src/crypto/ctaes/: README.md
src/index/: base.h  blockfilterindex.h  disktxpos.h  txindex.h
src/interfaces/: README.md  chain.h  handler.h  node.h  wallet.h
src/leveldb/util/: env_posix.cc
src/logging/: timer.h
src/node/: README.md  coin.h  coinstats.h  context.h  interfaces.cpp  psbt.h  transaction.h  ui_interface.h  utxo_snapshot.h
src/policy/: feerate.h  fees.cpp  fees.h  policy.h  rbf.h  settings.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  README.md  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  createwalletdialog.cpp  createwalletdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  macos_appnap.h  macos_appnap.mm  main.cpp  modaloverlay.h  monicoin.cpp  monicoin.h  monicoin.qrc  monicoin_locale.qrc  monicoinaddressvalidator.cpp  monicoinaddressvalidator.h  monicoinamountfield.cpp  monicoinamountfield.h  monicoingui.cpp  monicoingui.h  (+63 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  modaloverlay.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  receiverequestdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: monicoin_af.ts  monicoin_am.ts  monicoin_ar.ts  monicoin_be.ts  monicoin_bg.ts  monicoin_bn.ts  monicoin_bs.ts  monicoin_ca.ts  monicoin_cs.ts  monicoin_cy.ts  monicoin_da.ts  monicoin_de.ts  monicoin_el.ts  monicoin_en.ts  monicoin_en_GB.ts  monicoin_eo.ts  monicoin_es.ts  monicoin_es_CL.ts  monicoin_es_CO.ts  monicoin_es_DO.ts  monicoin_es_MX.ts  monicoin_es_VE.ts  monicoin_et.ts  monicoin_eu.ts  monicoin_fa.ts  monicoin_fi.ts  monicoin_fil.ts  monicoin_fr.ts  monicoin_gl_ES.ts  monicoin_he.ts  monicoin_hi.ts  monicoin_hr.ts  monicoin_hu.ts  monicoin_id.ts  monicoin_is.ts  monicoin_it.ts  monicoin_ja.ts  monicoin_ka.ts  monicoin_kk.ts  monicoin_km.ts  (+46 more)
src/qt/res/: monicoin-qt-res.rc
src/qt/test/: Makefile  addressbooktests.cpp  addressbooktests.h  apptests.cpp  apptests.h  compattests.cpp  compattests.h  rpcnestedtests.h  test_main.cpp  uritests.cpp  uritests.h  util.h  wallettests.cpp  wallettests.h
src/rpc/: blockchain.cpp  blockchain.h  client.h  mining.cpp  mining.h  misc.cpp  net.cpp  protocol.h  rawtransaction.cpp  rawtransaction_util.cpp  rawtransaction_util.h  register.h  request.cpp  request.h  server.h  util.cpp  util.h
src/script/: descriptor.h  interpreter.cpp  interpreter.h  keyorigin.h  monicoinconsensus.cpp  monicoinconsensus.h  script.h  script_error.h  sigcache.h  sign.h  signingprovider.h  standard.h
src/secp256k1/: .travis.yml  README.md  SECURITY.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/include/: secp256k1_schnorrsig.h
src/secp256k1/src/: tests.c
src/support/: cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Makefile  README.md  amount_tests.cpp  bswap_tests.cpp  compress_tests.cpp  crypto_tests.cpp  fs_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main.cpp  merkle_tests.cpp  miner_tests.cpp  net_tests.cpp  netbase_tests.cpp  rpc_tests.cpp  script_tests.cpp  scriptnum10.h  settings_tests.cpp  system_tests.cpp  util_tests.cpp  util_threadnames_tests.cpp  validationinterface_tests.cpp
src/test/data/: README.md  tx_valid.json
src/test/fuzz/: fuzz.h  script_monicoin_consensus.cpp  util.h
src/test/util/: net.h  (+8 more)
src/univalue/: README.md
src/util/: asmap.h  bip32.h  bytevectorhash.h  check.h  error.h  fees.h  golombrice.h  macros.h  memory.h  message.h  moneystr.h  rbf.h  ref.h  settings.h  spanparsing.h  strencodings.h  string.h  system.cpp  system.h  threadnames.cpp  threadnames.h  time.cpp  time.h  translation.h  ui_change_type.h  url.h  vector.h
src/wallet/: bdb.cpp  bdb.h  coincontrol.h  coinselection.h  context.h  crypter.h  db.cpp  db.h  dump.cpp  dump.h  feebumper.h  fees.h  ismine.h  load.h  rpcdump.cpp  rpcwallet.cpp  rpcwallet.h  salvage.h  scriptpubkeyman.h  sqlite.cpp  sqlite.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  wallettool.h  walletutil.h
src/zmq/: zmqabstractnotifier.h  zmqnotificationinterface.h  zmqpublishnotifier.h  zmqrpc.h  zmqutil.h
(+424 files in other folders)
