dist_man1_MANS=

if BUILD_MONICOIND
  dist_man1_MANS+=monicoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=monicoin-qt.1
endif

if BUILD_MONICOIN_CLI
  dist_man1_MANS+=monicoin-cli.1
endif

if BUILD_MONICOIN_TX
  dist_man1_MANS+=monicoin-tx.1
endif

if ENABLE_WALLET
if BUILD_MONICOIN_WALLET
  dist_man1_MANS+=monicoin-wallet.1
endif
endif
